--- a/Directory.Dmsrs.props
+++ b/Directory.Dmsrs.props
@@ -9,8 +9,11 @@
 	</PropertyGroup>
 
 	<PropertyGroup>
+		<TargetFrameworks>net7.0;net6.0</TargetFrameworks>
+		<WinformTargetFrameworks>net7.0-windows;net6.0-windows</WinformTargetFrameworks>
+	</PropertyGroup>
 
-		<TargetFrameworks>net7.0</TargetFrameworks>
+	<PropertyGroup>
 		<!--
 		As the SDK sets these attributes automatically as part of the build, you'll get build time errors. 
 		Simply delete the assembly attributes, and use the MSBuild properties instead.
@@ -34,42 +37,18 @@
 		<DebugType>portable</DebugType>
 	</PropertyGroup>
 
-	<PropertyGroup Condition="'$(TargetFramework)'=='net6.0|net7.0|net8.0'">
-		<ImplicitUsings>enable</ImplicitUsings>
+	<PropertyGroup>
+		<ImplicitUsings  Condition="'$(TargetFramework)'=='net6.0|net7.0|net8.0'">enable</ImplicitUsings>
+		<GeneratePackageOnBuild Condition="'$(IsTestProject)' != 'true'">true</GeneratePackageOnBuild>
 	</PropertyGroup>
 
 	<!-- *** - Warning - ***
   All changes in this file will impact all project files of current solution(sln). 
   Properties in this file can be changed in general if you using it.    
-  please provide your good idea if you are willing  -->
+  please provide your good idea if you are willing 
+    -->
 	<Import Project="./Directory.Dmsrs.Version.props"/>
-	<PropertyGroup>
-		<CertificateFileName>EmitMapper.snk</CertificateFileName>
-		<ChangeLogFileName>changelog.md</ChangeLogFileName>
-		<ProjectDescriptionFileName>description.md</ProjectDescriptionFileName>
-		 
-	</PropertyGroup>
-	<PropertyGroup>
-		
-		<PackageVersion>$(Version)</PackageVersion>
-		<Title>$(AssemblyName)</Title>		
-		<Authors>Jimbo</Authors>
-		<Company>DMSRS</Company>
-		<Copyright>Copyright (c) 2006-2022 DMSRS. All rights reserved.</Copyright>
-		<PackageId>DMSRS.$(AssemblyName)</PackageId>
-		<PackageTags>EmitMapper;Mapper;POCO;Object Mapping</PackageTags>
-		<PackageLicenseExpression>MIT</PackageLicenseExpression>
-		<PackageProjectUrl>https://github.com/niubilitynetcore/EmitMapper</PackageProjectUrl>
-		<RepositoryType>git</RepositoryType>
-		<RepositoryUrl>https://github.com/niubilitynetcore/EmitMapper</RepositoryUrl>
-		<PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
 
-		<!--<PackageOutputPath>$(PropsDir)nupkgs</PackageOutputPath>-->
-	</PropertyGroup>
-
-	<PropertyGroup Condition="'$(IsTestProject)' != 'true'">
-		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-	</PropertyGroup> 
 	<PropertyGroup Condition="'$(GITHUB_ACTIONS)' == 'true'">
 		<ContinuousIntegrationBuild>true</ContinuousIntegrationBuild>
 		<!-- Optional: Publish the repository URL in the built .nupkg (in the NuSpec <Repository> element) -->
@@ -86,12 +65,15 @@
 		<IncludeSymbols>true</IncludeSymbols>
 		<SymbolPackageFormat>snupkg</SymbolPackageFormat>
 	</PropertyGroup>
-	
+
 	<ItemGroup>
 		<None Exclude="$(PropsDir)**/*.g.props" Include="$(PropsDir)**/*.props">
 			<Link> Solution Items/%(RecursiveDir)/%(Filename)%(Extension)</Link>
 		</None>
-		<None Exclude="$(PropsDir)**/*.props" Include="$(PropsDir)*.*">
+		<None Exclude="$(PropsDir)**/*.g.targets" Include="$(PropsDir)**/*.targets">
+			<Link> Solution Items/%(RecursiveDir)/%(Filename)%(Extension)</Link>
+		</None>
+		<None Exclude="$(PropsDir)**/*.props;$(PropsDir)**/*.targets" Include="$(PropsDir)*.*">
 			<Link> Solution Items/Root(.props)/%(Filename)%(Extension)</Link>
 		</None>
 		<None Include="$(PropsDir).github/**/*.*">
@@ -100,9 +82,7 @@
 		<None Include="$(PropsSolutionDir)**/*.*" Condition="Exists('$(PropsSolutionDir)')">
 			<Link> Solution Items/Root(.props)/Solution/%(RecursiveDir)/%(Filename)%(Extension)</Link>
 		</None>
-	</ItemGroup>
-	<ItemGroup Condition="'$(GITHUB_ACTIONS)' == 'true' and '$(IsTestProject)' != 'true'">
-		<PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1">
+		<PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1"  Condition="'$(GITHUB_ACTIONS)' == 'true' and '$(IsTestProject)' != 'true'">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
 		</PackageReference>
